--- a/dist.ini
+++ b/dist.ini
@@ -2,14 +2,20 @@ version=0.002
 
 name=Sah-Schemas-DataSizeSpeed
 
+[Data::Sah::Coerce]
+
 [Sah::Schemas]
 
 [@Author::PERLANCAR]
-:version=0.594
+:version=0.598
 
 [Prereqs / TestRequires]
+Data::Sah=0.902
+Test::More=0.98
+Test::Needs=0
 
 [Prereqs]
+perl=5.010001
 strict=0
 warnings=0
 Data::Dmp=0.21
